# Ray-tracer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  camera.h  cmake_install.cmake  hittable.h  hittable_list.h  lambertian.h  license.txt  main.cpp  main.h  material.h  ray.h  sphere.h  vec3.h
